--- a/BasicStrategyPatternConcept/Strategy Pattern Decider/Strategy Pattern Decider.csproj
+++ b/BasicStrategyPatternConcept/Strategy Pattern Decider/Strategy Pattern Decider.csproj
@@ -1,15 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
-        <RootNamespace>Strategy_Pattern</RootNamespace>
+        <RootNamespace>Strategy_Pattern_Decider</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\StrategyPattern.Shared.Logic\StrategyPattern.Shared.Logic.csproj" />
+      <ProjectReference Include="..\StrategyPattern.Shared.Logic\StrategyPattern.Shared.Logic.csproj" />
     </ItemGroup>
 
 </Project>
